force-app/main/default/objects/Patient__c/fields/Academic_Attendence_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Academic_Attendence_Percentage__c</fullName>
    <label>Academic Attendence Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>