force-app/main/default/objects/Patient__c/fields/Adhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Card_Number__c</fullName>
    <label>Adhar Card Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>