force-app/main/default/objects/Patient__c/fields/Admitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Date__c</fullName>
    <label>Admitted Date</label>
    <type>Date</type>
</CustomField>