force-app/main/default/objects/Patient__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(MFLOOR( (TODAY() - Date_of_Birth__c)/365 )) 


/*Value(RPAD(TEXT(FLOOR( (TODAY() - Date_of_Birth__c)/365 )), 3 )) 
TODAY() -  Date_of_Birth__c

IF(
ISBLANK( DOB__c ),
NULL,
FLOOR((TODAY() - DOB__c ) / 365.25)
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>