force-app/main/default/objects/Patient__c/fields/Anual_Income__c.field-meta.xml
<CustomField>
    <fullName>Anual_Income__c</fullName>
    <label>Anual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>