force-app/main/default/objects/Patient__c/fields/Current_Discount__c.field-meta.xml
<CustomField>
    <fullName>Current_Discount__c</fullName>
    <label>Current Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>