force-app/main/default/objects/Patient__c/fields/Disease_Description__c.field-meta.xml
<CustomField>
    <fullName>Disease_Description__c</fullName>
    <label>Disease Description</label>
    <type>TextArea</type>
</CustomField>