force-app/main/default/objects/Patient__c/fields/Has_Adhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Has_Adhar_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Adhar Card</label>
    <type>Checkbox</type>
</CustomField>