force-app/main/default/objects/Patient__c/fields/Has_any_backlogs__c.field-meta.xml
<CustomField>
    <fullName>Has_any_backlogs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has any backlogs</label>
    <type>Checkbox</type>
</CustomField>