force-app/main/default/objects/Patient__c/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <label>Insurance Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>