force-app/main/default/objects/Patient__c/fields/Is_a_student__c.field-meta.xml
<CustomField>
    <fullName>Is_a_student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a student</label>
    <type>Checkbox</type>
</CustomField>