force-app/main/default/objects/Patient__c/fields/Is_eligible_for_Arogyashree__c.field-meta.xml
<CustomField>
    <fullName>Is_eligible_for_Arogyashree__c</fullName>
    <formula>IF( AND( Anual_Income__c &lt;1000000,  Has_Adhar_Card__c ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is eligible for Arogyashree</label>
    <type>Checkbox</type>
</CustomField>