force-app/main/default/objects/Patient__c/fields/Is_eligible_for_Student_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Is_eligible_for_Student_Reimbursement__c</fullName>
    <formula>/*IF( 
AND( Is_a_student__c , NOT( Has_any_backlogs__c ) , Academic_Attendence_Percentage__c &gt; 75), 
true, false)

 IF(logical_test, value_if_true, value_if_false) */

/*IF( 
AND( Is_a_student__c = true, Has_any_backlogs__c = false , Academic_Attendence_Percentage__c &gt; 75), 
true, false)
 IF(Is_a_student__c = true, true, false)*/


 IF( AND(Is_a_student__c = true,   Academic_Attendence_Percentage__c &gt; 75) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is eligible for Student Reimbursement</label>
    <type>Checkbox</type>
</CustomField>