force-app/main/default/objects/Patient__c/fields/No_of_Days_stayed_in_Hospital__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_stayed_in_Hospital__c</fullName>
    <formula>Discharge_Date__c -  Admitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days stayed in Hospital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>