force-app/main/default/objects/Patient__c/fields/Patient_Criticality_Indiacator__c.field-meta.xml
<CustomField>
    <fullName>Patient_Criticality_Indiacator__c</fullName>
    <formula>IMAGE(CASE( Patient_Criticality__c , 
&quot;High&quot;, &quot;/img/samples/color_red.gif&quot;, 
&quot;Medium&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;/img/samples/color_green.gif&quot;), 
&quot;Criticality Indicator&quot;, 20, 100)

/*IF( Case_Age__c &gt; 20, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( Case_Age__c &gt; 10,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)
))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Criticality Indiacator</label>
    <type>Text</type>
</CustomField>