force-app/main/default/objects/Patient__c/fields/Today_s_date_is__c.field-meta.xml
<CustomField>
    <fullName>Today_s_date_is__c</fullName>
    <formula>CASE( WEEKDAY( TODAY() ) , 
               1, &quot;Sunday&quot;, 
               2, &quot;Monday&quot;,
               3, &quot;Tuesday&quot;,
               4, &quot;Wednesday&quot;,
               5, &quot;Thursday&quot;,
               6, &quot;Friday&quot;,
               &quot;Saturday&quot;) 
 &amp; &quot;, &quot; &amp; 
 CASE( DAY( TODAY() ) , 1 ,  TEXT(DAY( TODAY() )) &amp; &quot;st&quot; , 
                        21 ,  TEXT(DAY( TODAY() )) &amp; &quot;st&quot; ,
                        31 ,  TEXT(DAY( TODAY() )) &amp; &quot;st&quot; ,
                        2 , TEXT(DAY( TODAY() )) &amp; &quot;nd&quot;,
                        22 , TEXT(DAY( TODAY() )) &amp; &quot;nd&quot;,
                        3 , TEXT(DAY( TODAY() )) &amp; &quot;rd&quot;,
                        23 , TEXT(DAY( TODAY() )) &amp; &quot;rd&quot;, 
                        TEXT(DAY( TODAY() )) &amp; &quot;th&quot;)
&amp; &quot; &quot; &amp;
 CASE( MONTH( TODAY() ) , 1, &quot;Jan,&quot;, 
                          2, &quot;Feb,&quot;,
                          3, &quot;Mar,&quot;,
                          4, &quot;Apr,&quot;,
                          5, &quot;May,&quot;,
                          6, &quot;June,&quot;,
                          7, &quot;July,&quot;,
                          8, &quot;Aug,&quot;,
                          9, &quot;Sep,&quot;,
                          10, &quot;Oct,&quot;, 
                          11, &quot;Nov,&quot;,
                          &quot;Dec,&quot;)
&amp; &quot; &quot; &amp;
   TEXT( YEAR( TODAY() ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s date is</label>
    <type>Text</type>
</CustomField>