force-app/main/default/objects/Patient__c/validationRules/Validate_Adhar_Card_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Adhar_Card_Number</fullName>
    <active>true</active>
    <description>Adhar Card Number should be 10 digits</description>
    <errorConditionFormula>OR(
LEN( Adhar_Card_Number__c ) &lt;&gt; 12,
 NOT( ISNUMBER(Adhar_Card_Number__c) ) )</errorConditionFormula>
    <errorDisplayField>Adhar_Card_Number__c</errorDisplayField>
    <errorMessage>Enter Valid Adhar Card Number. 
It should be a 10 digit number.</errorMessage>
</ValidationRule>