force-app/main/default/objects/Patient__c/validationRules/Validate_Date_of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Date_of_Birth</fullName>
    <active>true</active>
    <description>Date of Birth should be in past only</description>
    <errorConditionFormula>Date_of_Birth__c &gt;=  TODAY()</errorConditionFormula>
    <errorMessage>Please enter a valid past date</errorMessage>
</ValidationRule>