force-app/main/default/objects/Patient__c/validationRules/Validate_Disease_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Disease_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Disease_Description__c ) ) , 
LEN(Disease_Description__c) &lt;= 100)</errorConditionFormula>
    <errorDisplayField>Disease_Description__c</errorDisplayField>
    <errorMessage>Please provide more description for the disease....!</errorMessage>
</ValidationRule>