force-app/main/default/objects/Patient__c/validationRules/Validate_Insurance_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Insurance_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  LEN( Insurance_Number__c )  &lt;&gt;  15,
  AND(
     NOT(ISBLANK(Insurance_Number__c)),
     NOT(REGEX(Insurance_Number__c,&quot;^[a-zA-Z0-9_]*$&quot;))
   )
)</errorConditionFormula>
    <errorMessage>Insurance Number should be contain alphabets and numbers only and should be 15 characters</errorMessage>
</ValidationRule>